# jupyterlab-codex

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: build.yml
jupyter-config/nb-config/: jupyterlab_codex.json
jupyter-config/server-config/: jupyterlab_codex.json
jupyterlab_codex/: __init__.py  handlers.py
schema/: plugin.json
src/: codex.ts  handler.ts  icon.ts  index.ts  toolbar.ts
