[tool.poetry]
name = "jupyterlab-codex"
version = "0.0.1"
description = ""
authors = ["Simon Liang <simon@x-tech.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
build = "^0.6.1"
jupyterlab = "^3.1.9"
twine = "^3.4.2"

# [build-system]
# requires = ["poetry>=0.12"]
jupyter-packaging = "^0.10.4"
# build-backend = "poetry.masonry.api"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyterlab_codex/labextension/static/style.js"]
ensured-targets = ["jupyterlab_codex/labextension/static/style.js", "jupyterlab_codex/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["yarn"]

[tool.check-manifest]
ignore = ["jupyterlab_codex/labextension/**", "yarn.lock", ".*", "package-lock.json"]

[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"
